integrate stripe add checkout spec in openapi.yml
